--- a/client/src/Components/NewItems/NewItems.css
+++ b/client/src/Components/NewItems/NewItems.css
@@ -8,13 +8,13 @@
 
 .newitems h1 {
     color: #171717;
-    font-size: 50px;
     font-weight: 600;
+    font-size: 20px; /* Smallest screen default */
 }
 
 .newitems hr {
-    width: 200px;
-    height: 6px;
+    width: 100px;
+    height: 3px;
     border-radius: 10px;
     background: #252525;
 }
@@ -22,38 +22,29 @@
 .newitems-item {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: end;
+    gap: 5px;
     margin-top: 50px;
-    width: 100%;
-    gap: 30px;
 }
 
 
-@media(max-width: 1280px) {
+
+/* Responsive styles */
+@media (min-width: 501px) {
     .newitems {
-        height: 70vh;
-    }
-
-    .newitems h1 {
-        font-size: 30px;
-    }
-
-    .newitems hr {
-        width: 160px;
-        height: 4px;
+        height: 100vh;
     }
 
     .newitems-item {
-        gap: 20px;
-        margin-top: 30px;
+        gap: 15px;
     }
 }
 
-
-@media(max-width: 1024px) {
+@media (min-width: 801px) {
     .newitems {
-        height: 60vh;
+        height: 100vh;
+        gap: 10px;
     }
 
     .newitems h1 {
@@ -71,35 +62,41 @@
     }
 }
 
-
-@media(max-width: 800px) {
+@media (min-width: 1025px) {
     .newitems {
-        height: 50vh;
-        gap: 6px;
+        height: 100vh;
     }
 
     .newitems h1 {
-        font-size: 20px;
+        font-size: 30px;
     }
 
     .newitems hr {
-        width: 100px;
+        width: 160px;
+        height: 4px;
     }
 
     .newitems-item {
-        gap: 5px;
+        gap: 20px;
+        margin-top: 30px;
     }
 }
 
-
-@media(max-width: 500px) {
+@media (min-width: 1281px) {
     .newitems {
-        height: 90vh;
+        height: auto; /* Default for larger screens */
+    }
+
+    .newitems h1 {
+        font-size: 50px;
+    }
+
+    .newitems hr {
+        width: 200px;
+        height: 6px;
     }
 
     .newitems-item {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
+        gap: 30px;
     }
 }
