--- a/client/src/Components/Newsletter/Newsletter.css
+++ b/client/src/Components/Newsletter/Newsletter.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
     margin: auto;
     padding: 0px 140px;
     margin-bottom: 150px;
